test/gen/err005.go2
// errorcheck

// Copyright 2020 The Go Authors. All rights reserved.
// Use of this source code is governed by a BSD-style
// license that can be found in the LICENSE file.

// Issue 39738.
package p

func F1[type T]() {}

func F2() {
     type s struct{}
     F1[s]() // ERROR "locally defined type"
}
